# bifrost_chewbbaca

./: .gitignore  .gitmodules  Dockerfile  HISTORY.md  README.md  custom_install.sh  download_alleles_bigsdb.py  environment.yml  html_download.py  install.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker_build_and_push_to_dockerhub.yml  solve_conda_env.yml  test_standard_workflow.yml
bifrost_chewBBACA/: __main__.py  config.yaml  launcher.py  pipeline.smk  read_json.py  rule__cge_resfinder.py
bifrost_chewbbaca/: __init__.py  __main__.py  blast_gene_call_utils.py  blast_locus_call_utils.py  config.yaml  datadump.py  launcher.py  pipeline.smk  pipeline_blast_ORF.smk  pipeline_blat.smk  pipeline_blatv2.smk  pipeline_mmseqs.smk  pipeline_pieces.smk  pipelinev2.smk  rule__blast_genecall.py  rule__blast_genecall_ORF.py  rule__blast_genecall_pieces.py  rule__blast_locuscall.py  rule__blat_genecall.py  rule__blat_genecallv2.py  rule__chewbbaca.py  rule__mmseqs_genecall.py  rule__split_assembly_fasta.py  run_standalone.py
docs/: index.rst
resources/genelists/: info.txt
tests/: test_simple.py
