[bumpversion]
current_version = v2_2_3
parse = (v(?P<major>\d+))(_(?P<minor>\d+))(_(?P<patch>\d+))
serialize = v{major}_{minor}_{patch}
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_cge_resfinder/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_cge_resfinder/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:tests/test_simple.py]
search = component_name = "cge_resfinder__{current_version}"
replace = component_name = "cge_resfinder__{new_version}"

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = 
	tests
